Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23755

QAbstractItemModel::endResetModel () does not mention to emit a signal

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.0.0
    • 4.6.2, 4.7.0, 4.8.0
    • Widgets: Itemviews
    • None
    • 7e828e365e05cdb98423f10374ea8fd2177ba3f7

      The documentation to
      void QAbstractItemModel::endResetModel ()
      should mention that the signal
      void QAbstractItemModel::modelReset () [signal]
      is emitted after the reset.

      Is there a way to contribute to the Qt docs? I only found the new doc notes (http://developer.qt.nokia.com/blog/view/the_qt_documentation_notably_new_features), but getting 180 points until I'm allowed to add a note is not so cool.

        For Gerrit Dashboard: QTBUG-23755
        # Subject Branch Project Status CR V

            w00t Robin Burchell
            granjow Simon A. Eugster
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes