Document where modelReset() is emitted

The resetModel() signal indicates that the model is reset. Previously
there was no note that the signal is emitted also when endResetModel()
is called.

Task-number: QTBUG-23755
Change-Id: I6c3c1ccef580e9c1112c3af79912cffca675e140
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>

cregit: 7e828e365e05cdb98423f10374ea8fd2177ba3f7 https://github.com/qt/qtbase/commit/7e828e365e05cdb98423f10374ea8fd2177ba3f7